# codecraft

./: .env.example  .gitignore  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.sisyphus/plans/: codecraft-continuation-plan.md
desktop/: index.html  package-lock.json  package.json
desktop/src/: App.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
src/: index.ts
src/__tests__/: setup.ts
src/cli/: index.tsx
src/core/: agent.test.ts  agent.ts  config.test.ts  config.ts  index.ts  session-storage.test.ts  session-storage.ts  session.ts  token-counter.test.ts  token-counter.ts
src/providers/: anthropic.ts  base-url.test.ts  base-url.ts  base.ts  google.ts  index.ts  models.test.ts  models.ts  ollama.ts  openai.ts  registry.test.ts  registry.ts
src/providers/__tests__/: mock-provider.ts
src/server/: index.test.ts  index.ts  routes.test.ts  routes.ts  types.ts
src/tools/: execute-command.ts  grep.ts  index.ts  list-directory.ts  read-file.ts  search-files.ts  write-file.ts
src/tools/__tests__/: execute-command.test.ts  read-file.test.ts  utils.ts
src/types/: index.ts
src/ui/: App.test.tsx  App.tsx  ChatInput.tsx  Header.tsx  HelpOverlay.tsx  MessageList.tsx  StatusBar.tsx  index.ts
